--- a/pc.css
+++ b/pc.css
@@ -4,15 +4,15 @@
 
 
 
-  --color-1: #cceecc; /* */
+  --color-1: #FFCC97; /* */
 
-  --color-2: #e3f1af; /* */
+  --color-2: #FFBA85; /* */
 
-  --color-3: #4bc84b; /* main color */
+  --color-3: #CC723D; /* main color */
 
-  --color-4: #71da35; /* sub  color */
+  --color-4: #BA602B; /* sub  color */
 
-  --color-5: #cff1af; /* */
+  --color-5: #FFBA85; /* */
 
 }
 
