--- a/pc.css
+++ b/pc.css
@@ -14,6 +14,8 @@
 
   --color-5: #964b00; /* */
 
+  --color-6: #c06b16;
+
 }
 
 
@@ -22,7 +24,7 @@ header #header-bar > .row {
 
     padding-top: 0.3em; padding-bottom: 0.3em; border-top: 4px solid var(--color-5);
 
-    background: -webkit-linear-gradient(45deg, var(--color-3) 0%,var(--color-5) 11%,var(--color-2) 100%);
+    background: -webkit-linear-gradient(45deg, var(--color-3) 0%,var(--color-6) 11%,var(--color-2) 100%);
 
     border-bottom: 2px solid var(--color-1); border-right: 2px solid var(--color-1) 
 
