--- a/nn.css
+++ b/nn.css
@@ -230,7 +230,7 @@ header #header-bar #header-top-notice strong.notice-badge {
 
 #article-list>.article-list-row>.item>.list-header>span {
 
-    background-color: #; /* 글 추천 수 배경 색 */
+    background-color: #b15725; /* 글 추천 수 배경 색 */
 
 }
 
@@ -308,7 +308,7 @@ header #header-bar #header-top-notice strong.notice-badge {
 
     background-color: #a04f22; /* 글 쓰기 버튼 배경 색 */
 
-    border-color: #ffffff; /* 글 쓰기 버튼 배경 색 */
+    border-color: #e29b74; /* 글 쓰기 버튼 배경 색 */
 
 }
 
@@ -340,7 +340,7 @@ header #header-bar #header-top-notice strong.notice-badge {
 
 .btn-outline-success {
 
-    color: #ffffff; /* 추천 버튼 배경 색 */
+    color: #e29b74; /* 추천 버튼 배경 색 */
 
     border-color: #e29b74; /* 추천 버튼 테두리 색 */
 
