--- a/cuss.css
+++ b/cuss.css
@@ -6,7 +6,7 @@ select.form-control,
 input[type=checkbox],
 input[type=radio],
 .opt {
-    cursor: url(https://upload.tgd.kr/20220726/6e7f6284c872a9663609f06326f14609.png) 0 0, auto !important;
+    cursor: url(https://discord.com/channels/@me/913779873611403315/1001183462109233302) 0 0, auto !important;
 }
 
 
@@ -20,7 +20,7 @@ input[type=radio],
 .reply > .reply-header > .reply-writer.logged,
 .reply-menu, .btn, .fr-command.fr-btn, .fr-view img,
 .pull-left, a {
-    cursor: url(https://upload.tgd.kr/20220726/e9b9f35665ff79e4ee3b912a4d36f891.png) 0 0, auto !important;
+    cursor: url(https://discord.com/channels/@me/913779873611403315/1001183484653621371) 0 0, auto !important;
 }
 
 
@@ -30,5 +30,5 @@ input[type=radio],
 #article-list #boardSearchForm .form-control,
 .fr-view, .fr-box.fr-basic.fr-element,
 input[type='text'] {
-    cursor: url(https://upload.tgd.kr/20220726/e7ff7dd774332884e9d3dce7f9c640c5.png) 0 0, auto !important;
+    cursor: url(https://discord.com/channels/@me/913779873611403315/1001183493734289418) 0 0, auto !important;
 }
