--- a/cuss.css
+++ b/cuss.css
@@ -20,7 +20,7 @@ input[type=radio],
 .reply > .reply-header > .reply-writer.logged,
 .reply-menu, .btn, .fr-command.fr-btn, .fr-view img,
 .pull-left, a {
-    cursor: url(https://cdn.discordapp.com/attachments/1001185943178461310/1001186023595843615/ramda_cusor_2.png) 0 0, auto !important;
+    cursor: url(https://discord.com/channels/1001185943178461307/1001185943178461310/1001186023897845921) 0 0, auto !important;
 }
 
 
