--- a/cuss.css
+++ b/cuss.css
@@ -6,7 +6,7 @@ select.form-control,
 input[type=checkbox],
 input[type=radio],
 .opt {
-    cursor: url(https://cdn.discordapp.com/attachments/1001185943178461310/1001185996131536916/ramda_cusor_1.png) 0 0, auto !important;
+    cursor: url(https://discord.com/channels/1001185943178461307/1001185943178461310/1001185996420960277) 0 0, auto !important;
 }
 
 
@@ -20,7 +20,7 @@ input[type=radio],
 .reply > .reply-header > .reply-writer.logged,
 .reply-menu, .btn, .fr-command.fr-btn, .fr-view img,
 .pull-left, a {
-    cursor: url(https://cdn.discordapp.com/attachments/1001185943178461310/1001186023595843615/ramda_cusor_2.png) 0 0, auto !important;
+    cursor: url(https://discord.com/channels/1001185943178461307/1001185943178461310/1001186023897845921) 0 0, auto !important;
 }
 
 
@@ -30,5 +30,5 @@ input[type=radio],
 #article-list #boardSearchForm .form-control,
 .fr-view, .fr-box.fr-basic.fr-element,
 input[type='text'] {
-    cursor: url(https://cdn.discordapp.com/attachments/1001185943178461310/1001186047360765962/ramda_cusor_3.png) 0 0, auto !important;
+    cursor: url(https://discord.com/channels/1001185943178461307/1001185943178461310/1001186047784402954) 0 0, auto !important;
 }
