--- a/cus.css
+++ b/cus.css
@@ -18,7 +18,7 @@ input[type=radio],
 
  {
 
- cursor: url(https://discord.com/channels/1001185943178461307/1001185943178461310/1001185996420960277) 0 0, auto !important;
+ cursor: url(https://cdn.discordapp.com/attachments/1001185943178461310/1001185996131536916/ramda_cusor_1.png) 0 0, auto !important;
 
 }
 
