--- a/cus.css
+++ b/cus.css
@@ -1,5 +1,3 @@
-/* 마우스 커서 기본 */
-
 html,
 
 body,
@@ -16,17 +14,15 @@ input[type=radio],
 
 .opt
 
- {
+{
 
- cursor: url(https://cdn.discordapp.com/attachments/1001185943178461310/1001185996131536916/ramda_cusor_1.png) 0 0, auto !important;
+cursor: url(https://cdn.discordapp.com/attachments/1001185943178461310/1001185996131536916/ramda_cusor_1.png) 0 0, auto !important;
 
 }
 
 
 
 
-
-/* 마우스 커서 링크 */
 
 #right-search-form>#right-search-btn,
 
@@ -52,17 +48,11 @@ input[type=radio],
 
 a {
 
- cursor: url(https://discord.com/channels/1001185943178461307/1001185943178461310/1001186023897845921) 0 0, auto !important;
+cursor: url(https://discord.com/channels/1001185943178461307/1001185943178461310/1001186023897845921) 0 0, auto !important;
 
 }
 
 
-
-
-
-
-
-/* 마우스 커서 텍스트 */
 
 span#viewers,
 
@@ -74,8 +64,20 @@ span#viewers,
 
 input[type='text']
 
- {
+{
 
- cursor: url(https://discord.com/channels/1001185943178461307/1001185943178461310/1001186047784402954) 0 0, auto !important;
+cursor: url(https://discord.com/channels/1001185943178461307/1001185943178461310/1001186023897845921) 0 0, auto !important;
+
+}
+
+.fr-popup .fr-command.fr-btn,
+
+.fr-view img,
+
+.pull-left,
+
+a {
+
+ cursor: url(https://discord.com/channels/1001185943178461307/1001185943178461310/1001186023897845921) 0 0, auto !important;
 
 }
