--- a/cus.css
+++ b/cus.css
@@ -48,7 +48,7 @@ cursor: url(https://cdn.discordapp.com/attachments/1001185943178461310/100118599
 
 a {
 
-cursor: url(https://discord.com/channels/1001185943178461307/1001185943178461310/1001186023897845921) 0 0, auto !important;
+cursor: url(https://cdn.discordapp.com/attachments/1001185943178461310/1001186023595843615/ramda_cusor_2.png) 0 0, auto !important;
 
 }
 
@@ -66,18 +66,7 @@ input[type='text']
 
 {
 
-cursor: url(https://discord.com/channels/1001185943178461307/1001185943178461310/1001186023897845921) 0 0, auto !important;
+cursor: url(https://cdn.discordapp.com/attachments/1001185943178461310/1001186047360765962/ramda_cusor_3.png) 0 0, auto !important;
 
 }
 
-.fr-popup .fr-command.fr-btn,
-
-.fr-view img,
-
-.pull-left,
-
-a {
-
- cursor: url(https://discord.com/channels/1001185943178461307/1001185943178461310/1001186023897845921) 0 0, auto !important;
-
-}
